# Play-

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: AchievementHTTPDownloader.cpp  AchievementHTTPDownloader.h  AchievementHTTPDownloaderCurl.cpp  AchievementHTTPDownloaderCurl.h  AchievementHTTPDownloaderWinHTTP.cpp  AchievementHTTPDownloaderWinHTTP.h  AchievementHardcore.cpp  AchievementHardcore.h  AchievementMemory.cpp  AchievementMemory.h  AchievementMemoryMonitor.cpp  AchievementMemoryMonitor.h  AchievementRcheevosAdapter.cpp  AchievementRcheevosAdapter.h  AchievementStateManager.h  AchievementSystem.cpp  AchievementSystem.h  AchievementSystemImpl.h  AchievementsConfig.cpp  AchievementsConfig.h  CMakeLists.txt  MemoryAccess.cpp  MemoryAccess.h  MemoryValidation.cpp  MemoryValidation.h  MemoryWatch.cpp  MemoryWatch.h  PS2VM.h  achievements.cmake
Source/ee/: Ee_SubSystem.h  PS2OS_Achievement.cpp  PS2OS_Achievement.h
Source/ui_qt/: AchievementLoginDialog.cpp  AchievementLoginDialog.h  AchievementSettingsWidget.cpp  AchievementSettingsWidget.h  CMakeLists.txt  mainwindow.cpp  settingsdialog.cpp  settingsdialog.h
Source/ui_qt/Qt_ui/: settingsdialog.ui
tests/: AchievementMemoryPerformanceTest.cpp  AchievementSystemTest.cpp  CMakeLists.txt  TestMain.cpp
